Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -440,97 +440,89 @@ the output is shown in the below Figure.11
 
 **DUT code:**
 
-
      // module:d_flipflop   
      module d_flipflop(dff.dut intf);  
  
-      //clocking block cd  
-      always @(intf.cd)  
+       //clocking block cd  
+       always @(intf.cd)  
 
-     //Non-Blocking assignment   
-     intf.cd.q <= intf.cd.d;  
+       //Non-Blocking assignment   
+       intf.cd.q <= intf.cd.d;  
  
-      endmodule : d_flipflop    
+     endmodule : d_flipflop    
 
 **Interface code:**
 
      //module: Interface  
      interface dff(input clk);    
 
-    //declare the signals    
-    logic d;   
-    logic q;   
+       //declare the signals    
+       logic d;   
+       logic q;   
 
-     //Clocking block for dut    
-     clocking cd @(posedge clk);   
-      default input #1step output #0;   
-        output q;   
+       //Clocking block for dut    
+       clocking cd @(posedge clk);   
+         default input #1step output #0;   
+         output q;   
          input d;    
        endclocking     
   
-    //modport for dut    
-      modport dut(clocking cd);    
-
-    //modport for tb     
-    modport tb(input q, output d, input clk);`   
+       //modport for dut    
+       modport dut(clocking cd);    
+       //modport for tb     
+       modport tb(input q, output d, input clk);`   
    
      endinterface: dff    
 
 **Test code:**
 
      //module: test
-      module test(dff.tb intf);
+     module test(dff.tb intf);
   
-      //task:drv
-      task drv;
-  
-    //loop
-    repeat(10)
-      begin
-    //test triggering at posedge
-        @(posedge intf.clk )
+       //task:drv
+       task drv;
+         //loop
+         repeat(10)
+           begin
+           //test triggering at posedge
+           @(posedge intf.clk )
 
-    //randomzing the d
-       
-    intf.d <= $random;
-     $display("test side[%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.d, intf.q);
-      end
-      $finish;
-     endtask 
+           //randomzing the d
+           intf.d <= $random;
+           $display("test side[%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.d, intf.q);
+         end
+         $finish;
+       endtask 
   
-     //calling the task drv
-     initial
-       begin
-       drv();
+       //calling the task drv
+       initial begin
+         drv();
        end 
      endmodule :test
 
 **Top module**
 
      //including the file test.sv and interface.sv  
-      
-         `include "test.sv"      
-         `include "interface.sv"    
+     `include "test.sv"      
+     `include "interface.sv"    
  
      module top;
-      
-     bit clk=1;
- 
-     initial
-    forever #5 clk = ~clk;
+       bit clk=1;
+       initial
+         forever #5 clk = ~clk;
 
-     //creating interface instance
+       //creating interface instance
        dff intf(clk);
 
-     //d_flipflop instance
-      d_flipflop t1(intf);  
+       //d_flipflop instance
+       d_flipflop t1(intf);  
 
-    //test Instance
-     test t2(intf);
+       //test Instance
+       test t2(intf);
 
-     initial
-     $monitor("DUT side [%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.cd.d, intf.cd.q);
-      endmodule : top
+       initial
+         $monitor("DUT side [%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.cd.d, intf.cd.q);
+     endmodule : top
 
 Figure:11,In below output for case1, first give posedge for both DUT and test. In this case at 0 time both DUT and test output is x, after at 10ns test randomize d value x to 0, that time Dut get 0 and give sample q output to 0, this clock cycle test(tb) only randomize value d = 0 but test(tb) take sampled previous value q = x.
 At 10ns my DUT give output d = 0 and q = 0, and at that time my test(tb) give output d = 0 and q = x.
@@ -570,13 +562,12 @@ the output is shown in the below Figure.14
      // module:d_flipflop   
      module d_flipflop(dff.dut intf);  
  
-      //clocking block cd  
-      always @(intf.cd)  
-
-     //Non-Blocking assignment   
-     intf.cd.q <= intf.cd.d;  
+       //clocking block cd  
+       always @(intf.cd)  
+       //Non-Blocking assignment   
+       intf.cd.q <= intf.cd.d;  
  
-      endmodule : d_flipflop    
+     endmodule : d_flipflop    
 
 **Interface code:**
 
@@ -584,22 +575,21 @@ the output is shown in the below Figure.14
      //module: Interface  
      interface dff(input clk);    
 
-    //declare the signals    
-    logic d;   
-    logic q;   
+       //declare the signals    
+       logic d;   
+       logic q;   
 
-     //Clocking block for dut    
-     clocking cd @(negedge clk);   
-      default input #1step output #0;   
-        output q;   
+       //Clocking block for dut    
+       clocking cd @(negedge clk);   
+         default input #1step output #0;   
+         output q;   
          input d;    
        endclocking     
   
-    //modport for dut    
-      modport dut(clocking cd);    
-
-    //modport for tb     
-    modport tb(input q, output d, input clk);`   
+       //modport for dut    
+       modport dut(clocking cd);    
+       //modport for tb     
+       modport tb(input q, output d, input clk);`   
    
      endinterface: dff    
 
@@ -607,57 +597,51 @@ the output is shown in the below Figure.14
 
 
      //module: test
-      module test(dff.tb intf);
+     module test(dff.tb intf);
   
-      //task:drv
-      task drv;
-  
-    //loop
-    repeat(10)
-      begin
-    //test triggering at posedge
-        @(posedge intf.clk )
+       //task:drv
+       task drv;
+         //loop
+         repeat(10)
+           begin
+           //test triggering at posedge
+           @(posedge intf.clk )
 
-    //randomzing the d
-       
-    intf.d <= $random;
-     $display("test side[%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.d, intf.q);
-      end
-      $finish;
-     endtask 
+           //randomzing the d
+           intf.d <= $random;
+           $display("test side[%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.d, intf.q);
+         end
+         $finish;
+       endtask 
   
-     //calling the task drv
-     initial
-       begin
-       drv();
+       //calling the task drv
+       initial begin
+         drv();
        end 
      endmodule :test
 
 **Top module**
 
      //including the file test.sv and interface.sv  
-      
-         `include "test.sv"      
-         `include "interface.sv"    
+     `include "test.sv"      
+     `include "interface.sv"    
  
      module top;
-      
-     bit clk=1;
- 
-     initial
-    forever #5 clk = ~clk;
+       bit clk=1;
+       initial
+         forever #5 clk = ~clk;
 
-     //creating interface instance
-       dff intf(clk);
+         //creating interface instance
+         dff intf(clk);
 
-     //d_flipflop instance
-      d_flipflop t1(intf);  
+         //d_flipflop instance
+         d_flipflop t1(intf);  
 
-    //test Instance
-     test t2(intf);
+         //test Instance
+         test t2(intf);
 
-     initial
-     $monitor("DUT side [%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.cd.d, intf.cd.q);
+         initial
+            $monitor("DUT side [%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.cd.d, intf.cd.q);
       endmodule : top
 
 
@@ -686,96 +670,88 @@ the output is shown in the below Figure.16
      // module:d_flipflop   
      module d_flipflop(dff.dut intf);  
  
-      //clocking block cd  
-      always @(intf.cd)  
+       //clocking block cd  
+       always @(intf.cd)  
 
-     //Non-Blocking assignment   
-     intf.cd.q <= intf.cd.d;  
+       //Non-Blocking assignment   
+       intf.cd.q <= intf.cd.d;  
  
-      endmodule : d_flipflop    
+     endmodule : d_flipflop    
+
 
 **Interface code:**
-
 
      //module: Interface  
      interface dff(input clk);    
 
-    //declare the signals    
-    logic d;   
-    logic q;   
+       //declare the signals    
+       logic d;   
+       logic q;   
 
-     //Clocking block for dut    
-     clocking cd @(negedge clk);   
-      default input #1step output #0;   
-        output q;   
+       //Clocking block for dut    
+       clocking cd @(negedge clk);   
+         default input #1step output #0;   
+         output q;   
          input d;    
        endclocking     
   
-    //modport for dut    
-      modport dut(clocking cd);    
-
-    //modport for tb     
-    modport tb(input q, output d, input clk);`   
+       //modport for dut    
+       modport dut(clocking cd);    
+       //modport for tb     
+       modport tb(input q, output d, input clk);`   
    
      endinterface: dff    
 
 **Test code:**
 
-
      //module: test
-      module test(dff.tb intf);
+     module test(dff.tb intf);
   
-      //task:drv
-      task drv;
+       //task:drv
+       task drv;
+         //loop
+         repeat(10)
+           begin
+           //test triggering at posedge
+           @(posedge intf.clk )
+           //randomzing the d
+           #3ns;
+           intf.d <= $random;
+           $display("test side[%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.d, intf.q);
+         end
+         $finish;
+       endtask 
   
-    //loop
-    repeat(10)
-      begin
-    //test triggering at posedge
-        @(posedge intf.clk )
-
-
-    //randomzing the d
-       #3ns;
-    intf.d <= $random;
-     $display("test side[%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.d, intf.q);
-      end
-      $finish;
-     endtask 
-  
-     //calling the task drv
-     initial
-       begin
-       drv();
+       //calling the task drv
+       initial begin
+         drv();
        end 
      endmodule :test
 
 **Top module**
 
      //including the file test.sv and interface.sv  
-      
-         `include "test.sv"      
-         `include "interface.sv"    
+      `include "test.sv"      
+      `include "interface.sv"    
  
-     module top;
-      
-     bit clk=1;
+     module top; 
+       bit clk=1;
  
-     initial
-    forever #5 clk = ~clk;
+       initial
+         forever #5 clk = ~clk;
 
-     //creating interface instance
+       //creating interface instance
        dff intf(clk);
 
-     //d_flipflop instance
-      d_flipflop t1(intf);  
+       //d_flipflop instance
+       d_flipflop t1(intf);  
 
-    //test Instance
-     test t2(intf);
+       //test Instance
+       test t2(intf);
 
-     initial
-     $monitor("DUT side [%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.cd.d, intf.cd.q);
-      endmodule : top
+       initial
+         $monitor("DUT side [%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.cd.d, intf.cd.q);
+     endmodule : top
 
 
 
