Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -475,7 +475,7 @@ The below figure shows the output of the inside constraint.
 **GitHub Lab Output link**
 
 
-# Inverted inside constraint
+##  6.Inverted inside constraint
 
 The inverted inside is the opposite of the inside operator. It can be achieved by just placing a not symbol **!** before it.    
 If we want to generate a value that should not be inside a range of values (range_of_values), here we can use the inside operator with negation
@@ -529,14 +529,14 @@ The below figure shows the output of the inverted inside constraint.
 **GitHub Lab Output link:**
 
 
-# Weighted Distribution
+## 7.Weighted Distribution
 The dist operator allows you to create the weighted distribution. **dist** is an operator that takes a list of values and weights, separated by **:=** or 
  **:/** operator.
 The value which is more weight, the occurrence of that value in randomization is more. The **dist** operator is helpful whenever to have weighted distribution during randomization. 
 
 There are two types of distribution operators
 
-## 1.  := operator
+### 1.  := operator
 The := operator assigns the specified weight to the item or, if the item is a range, specified value to every value in the range. 
 
 * **Syntax**
@@ -589,7 +589,7 @@ The below figure shows the output of the weighted distribution with := operator.
 **GitHub Lab Output link**
 
 
-## 2. :/ operator
+### 2. :/ operator
 
 The :/ operator assigns the specified weight to the item or,  if the item is a range,  to the range as a whole. If there are n values in the range, the weight of each value is range_weight / n
 
@@ -644,8 +644,11 @@ The below figure shows the output of the weighted distribution with :/ operator.
 
 **GitHub Lab File link**
 
-**GitHub Lab Output link**
-### Bidirectional constraint     
+**GitHub Lab Output link**  
+
+***
+  
+## 8.Bidirectional constraint     
 Constraints are solved bidirectionally, which means constraints on all random variables will be solved parallel.    
 Constraints solve parallelly for all random variables and make sure no constraint fails.
 
@@ -694,13 +697,15 @@ The below figure shows the output of the bidirectional constraint.
 
 **GitHub Lab Output link:**
 
-# Implication Constraint
+***
 
-The implication operator is used to declare the conditional relations between two variables. The implication operator is placed between the expression and constraint
+## 9.Implication Constraint
 
-implication operator is denoted by the symbol **->**   
+The implication operator is used to declare the conditional relations between two variables. The implication operator is placed between the expression and constraint.
 
-## Implication operator 
+The implication operator is denoted by the symbol **->**   
+
+### Implication operator 
 
 The implication operator **->** is used in a constraint expression to show the conditional relationship between two variables. The implication operator is placed between the expression and constraint.
 
@@ -757,8 +762,8 @@ The below figure shows the output of the implication constraint.
 **GitHub Lab Output link:**
 
 
-## if-else Constraint
- The **if-else**  block allows conditional execution of constraint. If the expression is true, all the constraints in the first constraint-block must be satisfied, otherwise, all the constraints in the optional else constraint must be satisfied.  
+## 10.if-else Constraint
+ The **if-else**  block allows conditional execution of constraint. If the expression is true, all the constraints in the first constraint block must be satisfied, otherwise, all the constraints in the optional else constraint must be satisfied.  
 
 
  * **Example:**      
@@ -815,7 +820,7 @@ The below figure shows the output of the if-else constraint.
 **GitHub Lab Output link**
 
 
-### foreach constraint    
+## 11.foreach constraint    
  
 The foreach constructs iterate over the elements of an array and assign all the values of each element to that of its index.      
 The foreach loop iterates over the elements of an array, so constraints with the foreach loop are called Iterative constraints
@@ -873,7 +878,7 @@ The below figure shows the output of the foreach constraint.
 **GitHub Lab Output link:**
 
 ***
-## Solve before Constraint 
+## 12.Solve before Constraint 
 
 This constraint property is used inside the constraint block for specifying the constraint solving. If the variables are dependent as the constraint are bidirectional, the value of one variable will influence the other variable. This solve-before can change the probability distribution by forcing the constraint solver to choose the order in which constraints are to be solved.
 
@@ -953,7 +958,7 @@ so in the first 32 iterations, there was only 1 iteration that got value1 of 1 i
 
 ***
 
-##  Static Constraint  
+##  13.Static Constraint  
 
 static constraints are shared across all the objects of that class.  
 A static constraint mode can be enabled or disabled by any object handle of that class which reflects in all the classes.  
@@ -1014,7 +1019,7 @@ Class 1 has two objects 1&2 and class2 has objects 3&4.In class1 used non-static
 
 ***
 
-##  Randomization Methods  
+##  14.Randomization Methods  
 
 In general, there will be three randomize methods:  
 
@@ -1171,7 +1176,7 @@ In the first iteration of the example calling randomize function, there was no c
  
 ***
 
-##  Inline Constraint 
+##  15.Inline Constraint 
 
 Consider that some variables are needed to be randomized in 100 iterations but in the first 95 iterations user needs the common constraints, and in the last 5 iterations user wants to add some more constraints along with previous constraints, then instead of writing in different classes user can just add those extra constraints from where the randomization function is called using with the keyword as shown.
 
@@ -1302,7 +1307,7 @@ Here the constraint solver takes both the constraints into consideration which m
              Fig.  
 
 
-****Soft Constraints**** 
+## 16.Soft Constraint
 
 Constraints declared with the keyword soft are called as soft constraints.  
 If any conflict between class constraint and inline constraint leads to a randomization failure, it is clear that it is not possible to override the class constraint by using an inline constraint. So some test-case demand overrides the constraints, this can be done by using a soft keyword in class constraint.   
@@ -1399,7 +1404,7 @@ In the above example, in the starting 5 iterations normal constraint are execute
 ***
 
 
-****Disable constraint****  
+## 17.Disable constraint 
 
 Constraints in a class can be disabled using the **constraint_mode** method  
 By default all the constraints will be enabled, during the randomization constraint user will not consider the disabled constraints.  
@@ -1461,7 +1466,7 @@ In the above output, If constraint mode is 1 it displays 5,10,15 and disabled th
 
 ***
 
-**Disable randomization**  
+## 18.Disable randomization  
 
 The rand_mode() method is used to disable the randomization of a variable declared with the rand/randc keyword.   
     
@@ -1533,7 +1538,7 @@ we were declaring the output 0 to 5 variations, in that 0 to 3, enable randomiza
 **Output snap**   
 ![Untitled Diagram drawio (12)](https://user-images.githubusercontent.com/106074838/191422847-50352caa-f6f3-4e0e-83cd-4c99b4e41031.png)
 
-In the above output, using Randomization mode is 1 to enable the randomization, then it will display the random data . using randomization mode is 0 to disable the randomization, then it display the zero or previous randomization data. In our output snap, iterations from 0 to 3 both randomization enable and disable  is happening and iteration 4 only randomization disable is happening.     
+In the above output, using Randomization mode is 1 to enable the randomization, then it will display the random data . using randomization mode is 0 to disable the randomization, then it displays the zero or previous randomization data. In our output snap, iterations from 0 to 3 both randomization enable and disable is happening and iteration 4 only randomization disable is happening.     
 
 **GitHub lab file link**
 
@@ -1541,7 +1546,7 @@ In the above output, using Randomization mode is 1 to enable the randomization, 
 
 ***
 
-**randcase**   
+## 19.randcase   
 
 The keyword randcase introduces a case statement that randomly selects one its of branches.  
 
