Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -14,7 +14,23 @@ All the constraint blocks are active at the same time.
 |:-----|:----------|
 |1.|[Random Function System](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#1random-function-system)|
 |2.|[Random Variables](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#2random-variables)|
-|3.|
+|3.|[Constraint Block](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#3constraint-block)|
+|4.|[Array Randomization](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#4array-randomization)|
+|5.|[Inside Constraint](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#5inside-constraint)|
+|6.|[Inverted Inside Constraint](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#6inverted-inside-constraint)|
+|7.|[Weighted Distribution](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#7weighted-distribution)|
+|8.|[Bidirectional Constraint](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#8bidirectional-constraint)|
+|9.|[Implication Constraint](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#9implication-constraint)|
+|10.|[if-else constraint](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#10if-else-constraint)|
+|11.|[foreach](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#11foreach-constraint)|
+|12.|[Solve before constraint](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#12solve-before-constraint)|
+|13.|[Static Constraint](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#13static-constraint)|
+|14.|[Randomization methods](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#14randomization-methods)|
+|15.|[Inline Constraint](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#15inline-constraint)|
+|16.|[Soft Constraint](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#16soft-constraint)|
+|17.|[Disable Constraint](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#17disable-constraint)|
+|18.|[Disable Randomization](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#18disable-randomization)|
+|19.|[randcase](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/14.Constraint#19randcase)|
 
 
 
