Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -433,9 +433,11 @@ The below example shows the randomization of elements of the queue and using con
     endmodule
   
  
-* **Output snap**  
-**lab link**  
-**output log file link**  
+* **Output snap** 
+ 
+**lab link** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/queue/queue_code.sv 
+
+**output log file link**   
 
 
 ## 5.Inside constraint
@@ -488,7 +490,7 @@ The below figure shows the output of the inside constraint.
 ![fff drawio](https://user-images.githubusercontent.com/110447788/191229181-0b269a8a-9310-46f3-8b97-331a022af816.png)
 
 
-**GitHub Lab File link**
+**GitHub Lab File link** 
 
 **GitHub Lab Output link**
 
@@ -1607,7 +1609,7 @@ In the above-output snap, the sum of all weights is 7; therefore, the probabilit
 The probability of taking the second is (2/7) i.e. 0.285, and the probability of taking the third is (3/7) i.e. 0.428. Each call to the randcase statement will return a random number in the range from 0 to 3.  
   
 
-**GitHub lab file link**
+**GitHub lab file link** 
 
 **GitHub log file link**
 
