Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -543,6 +543,10 @@ Now, at 20ns test randomize d value 0 to 1, At that time DUT get 1 and give samp
 
 
 
+**Github lab code link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/tree/b7_team_kachori/interface/Clocking_Block/clocking_block_case1
+
+**Github lab output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_team_kachori/interface/Clocking_Block/clocking_block_case1/top.log
+
 
 ## CASE : 2
 
@@ -655,6 +659,13 @@ the output is shown in the below Figure.14
 ![case2](https://user-images.githubusercontent.com/110448382/191226469-ef5683d9-59d5-44f1-b148-ef6ae061435b.png)
 
                                     Fig.15: output waveform of case2.
+
+
+**Github lab code link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/tree/b7_team_kachori/interface/Clocking_Block/clocking_block_case2
+
+**Github lab output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_team_kachori/interface/Clocking_Block/clocking_block_case2/top.log
+
+
 ## CASE : 3
 
 In this case both DUT  is triggered at negative edge (clocking block clock) and Test is triggered at positive edge (interface clock).  
@@ -836,6 +847,13 @@ wave form @negedge clock
 ![case3](https://user-images.githubusercontent.com/110448382/191226727-9b390710-cc75-46d1-b909-2fde6c65218a.png)
 
                                          Fig.23: output waveform of case3.
+
+
+**Github lab code link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/tree/b7_team_kachori/interface/Clocking_Block/clocking_block_case3
+
+**Github lab output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_team_kachori/interface/Clocking_Block/clocking_block_case3/top.log
+
+
                               
 ---     
   
