Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -490,9 +490,11 @@ The below figure shows the output of the inside constraint.
 ![fff drawio](https://user-images.githubusercontent.com/110447788/191229181-0b269a8a-9310-46f3-8b97-331a022af816.png)
 
 
-**GitHub Lab File link** 
+**GitHub Lab File link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/common_constraint/inside/inside_const.sv
 
-**GitHub Lab Output link**
+**GitHub Lab Output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/common_constraint/inside/inside_const.sv.log 
+   
+                             Fig:- Output of inside constraint
 
 
 ##  6.Inverted inside constraint
@@ -543,10 +545,11 @@ The below figure shows the output of the inverted inside constraint.
 
 ![fff-Page-2 drawio](https://user-images.githubusercontent.com/110447788/191229816-41c7a2a5-bb4a-4c2e-be51-ee747a4ea36c.png)
 
+                             Fig:- Output of inverted inside constraint
 
-**GitHub Lab File link:**
+**GitHub Lab File link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/common_constraint/invert_inside/invert_inside.sv
 
-**GitHub Lab Output link:**
+**GitHub Lab Output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/common_constraint/invert_inside/invert_inside.sv.log
 
 
 ## 7.Weighted Distribution
@@ -601,12 +604,12 @@ The below figure shows the output of the weighted distribution with := operator.
 
 ![fff-Page-3 drawio](https://user-images.githubusercontent.com/110447788/191230064-f30d3653-31f6-4f48-b3c2-92ddeda93c39.png)
 
-                                       Fig-: 
+                                       Fig-: Output of := operator - The  occurrence of '6' is more because '6' has more weight
 
 
-**GitHub Lab File link**
+**GitHub Lab File link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/common_constraint/weight1/weighted_distribution.sv
 
-**GitHub Lab Output link**
+**GitHub Lab Output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/common_constraint/weight1/wighted_distribution.sv.log
 
 
 ### 2. :/ operator
@@ -660,11 +663,12 @@ The below figure shows the output of the weighted distribution with :/ operator.
  
 ![fff-Page-4 drawio](https://user-images.githubusercontent.com/110447788/191232923-542605a3-fe78-4d93-b38f-e3ca2ee6a87d.png)
 
-                           Fig-:
+                           Fig-: Output of :/ operator- The occurrence of '6' is more because '6' has more weight
 
-**GitHub Lab File link**
 
-**GitHub Lab Output link**  
+**GitHub Lab File link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/common_constraint/weighted_2/weighted_distribution2.sv
+
+**GitHub Lab Output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/common_constraint/weighted_2/weighted_distribution2.sv.log 
 
 ***
   
@@ -713,9 +717,11 @@ The below figure shows the output of the bidirectional constraint.
 
 ![fff-Page-5 drawio](https://user-images.githubusercontent.com/110447788/191233065-f717f5f6-9208-4c68-9008-f5f3c9062d3e.png)
 
-**GitHub Lab File link:**
+                               Fig-: Output of bidirectional constraint
 
-**GitHub Lab Output link:**
+**GitHub Lab File link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/common_constraint/bidirectional/bidirectional_const.sv
+
+**GitHub Lab Output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/common_constraint/bidirectional/bidirectional_const.sv.log
 
 ***
 
@@ -775,11 +781,12 @@ The below figure shows the output of the implication constraint.
 
 ![fff-Page-7 drawio](https://user-images.githubusercontent.com/110447788/191240436-0fbc7179-7ffd-437e-8e0c-9bebfd59475e.png)
 
-                            Fig-:
+                            Fig-:  Output of implication operator
 
-**GitHub Lab file link:**
 
-**GitHub Lab Output link:**
+**GitHub Lab file link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/implication/implication/implication_constraint.sv
+
+**GitHub Lab Output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/implication/implication/implication_constraint.sv.log
 
 
 ## 10.if-else Constraint
@@ -833,11 +840,11 @@ The below figure shows the output of the if-else constraint.
 
 ![fff-Page-6 drawio (2)](https://user-images.githubusercontent.com/110447788/191235603-76cca8e3-926f-49da-ac08-9a18677a563a.png)
 
-                                 Fig-:
+                                 Fig-: Output of if-else constraint
 
-**GitHub Lab File link**
+**GitHub Lab File link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/implication/implication_ifelse/implication_ifelse.sv
 
-**GitHub Lab Output link**
+**GitHub Lab Output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/implication/implication_ifelse/implication_ifelse.sv.log
 
 
 ## 11.foreach constraint    
@@ -886,16 +893,15 @@ and set each element to the value of its particular index
 
 
  * **Output snap:**     
-
 The below figure shows the output of the foreach constraint. 
     
 ![fff-Page-8 drawio](https://user-images.githubusercontent.com/110447788/191323141-af0fbc8d-4923-4a90-aaf4-8e022372ec31.png)
 
-                                         Fig-:
+                                         Fig-: Output for foreach constraint
 
-**GitHub Lab File link:**
+**GitHub Lab File link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/foreach_constraint/static_cons.sv
 
-**GitHub Lab Output link:**
+**GitHub Lab Output link:** https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_SiliconCrew/constraints/implication/foreach_constraint/static_cons.sv.log
 
 ***
 ## 12.Solve before Constraint 
