Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -144,7 +144,7 @@ Parameters can be used in interfaces to make vector sizes and other declarations
 ****Syntax****
 
 `interface (interface_name) #(parameter parameter_name = initialize);`  
- ` [list_os_signals] `    
+ ` [list_of_signals] `    
 `endinterface` 
 
 
