Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -424,6 +424,7 @@ Eg. default input #3ps output #2
 ![clocking block](https://user-images.githubusercontent.com/110412474/190890934-67850b63-33fc-4009-a977-4539941d2a15.jpg)
                  
                            Fig.9: Block diagram of d_ff design
+The above figure.9 shows the design block diagram for d_ff. The Interface connect the DUT and test. The test provide the randomized value d. it is driven to DUT through interface. The DUT gives the sampled value q. The sampled value q is given as input to the test. Here the top module consist of all blocks such as test, interface and DUT. The instance of each block is created in top module. 
 ---
 ## CASE : 1
 
